# interviewSetupPython

./: .gitignore  README.md  pyproject.toml
service/: svc.py
service/test/: conftest.py  test_service.py
