[tool.poetry]
name = "orderly_python"
version = "0.1.0"
description = "Orderly Python Interview"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">3.7"
pytest = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
